@@ -20,28 +20,15 @@
       <!-- https://github.com/mockito/mockito/issues/3037 -->
       -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
       -Dfile.encoding=${project.build.sourceEncoding}
-      -Dnet.bytebuddy.experimental=true
       @${project.basedir}/argFile
     </argLine>
     <jacoco.skip>true</jacoco.skip> <!-- https://github.com/assertj/assertj/issues/3580 -->
     <rootDirectory>${project.basedir}/../</rootDirectory>
     <spotless.skip>false</spotless.skip>
-    <!-- Dependency versions -->
-    <byte-buddy.version>1.18.7</byte-buddy.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>net.bytebuddy</groupId>
-        <artifactId>byte-buddy</artifactId>
-        <version>${byte-buddy.version}</version>
-      </dependency>
-      <dependency> <!-- Included by mockito-core -->
-        <groupId>net.bytebuddy</groupId>
-        <artifactId>byte-buddy-agent</artifactId>
-        <version>${byte-buddy.version}</version>
-      </dependency>
       <dependency> <!-- Included by hibernate-core -->
         <groupId>org.jboss.logging</groupId>
         <artifactId>jboss-logging</artifactId>
@@ -50,11 +37,6 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
-    <!-- Compile -->
-    <dependency>
-      <groupId>net.bytebuddy</groupId>
-      <artifactId>byte-buddy</artifactId>
-    </dependency>
     <!-- Provided -->
     <dependency>
       <groupId>org.hamcrest</groupId>
@@ -78,7 +60,7 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.21.0</version>
+      <version>2.22.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -89,7 +71,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>33.5.0-jre</version>
+      <version>33.6.0-jre</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -107,7 +89,7 @@
     <dependency>
       <groupId>nl.jqno.equalsverifier</groupId>
       <artifactId>equalsverifier</artifactId>
-      <version>4.4.1</version>
+      <version>4.5</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -131,7 +113,7 @@
     <dependency>
       <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>7.3.0.Final</version>
+      <version>7.3.6.Final</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -139,12 +121,6 @@
           <artifactId>jakarta.inject-api</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.junit-pioneer</groupId>
-      <artifactId>junit-pioneer</artifactId>
-      <version>1.9.1</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -159,7 +135,7 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>7.0.6</version>
+      <version>7.0.7</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -185,7 +161,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore />
+                    <ignore/>
                   </action>
                 </pluginExecution>
               </pluginExecutions>
@@ -244,7 +220,6 @@
             <configuration>
               <bnd><![CDATA[
                 Import-Package:\
-                  net.bytebuddy.*,\
                   !org.assertj.core.*,\
                   *;resolution:="optional"
                 Multi-Release: true
@@ -264,12 +239,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
+
         <configuration>
           <rules combine.children="append">
             <bannedDependencies>
-              <includes>
-                <include>net.bytebuddy:byte-buddy</include>
-              </includes>
               <excludes>
                 <exclude>org.assertj:assertj-core</exclude>
                 <exclude>org.hamcrest:hamcrest-core</exclude>
